# ot_harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  korjaa.txt  muistio.db  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  ohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: kokeilu.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/: index.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: sekvenssi.drawio
src/: connect_database.py  initialize.py  make_database.py  muistio.db  program.py
src/entities/: note.py  user.py
src/repositories/: note_repository.py  user_repository.py
src/screen/: interface.py  noteview.py  sign_in.py  sign_up.py
src/services/: notefavors.py
src/tests/: note_repository_test.py  notefavors_test.py  project_test.py  user_repository_test.py  usertest.py
