[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["Venla Vanhala <venla.e.vanhala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"
coverage = "^7.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
